magpie 1.29
-----------
Support binary bin/magpie-zookeeper.sh, to emulate start/stop scripts
  in Hadoop/Hbase.
Support 'interactive' mode in MAGPIE_JOB_TYPE.
Convert Hbase 'performanceeval' from sequential read/write to random
  read/write.
Decrease default hbase.server.thread.wakefrequency to 500ms per online
  suggestions.
Adjust tasks/per node default if Hbase is running.
Minor cleanup of help output.

magpie 1.28
-----------
Support Hbase in Magpie

magpie 1.27
-----------
Fix corner cases with IntelLustre shuffling and UDA shuffling.
Make default slowstart .05 just like default Hadoop.
Require MAGPIE_SHUTDOWN_TIME >= 10 minutes if MAGPIE_POST_JOB_RUN is set
Add check for MAGPIE_STARTUP_TIME and MAGPIE_SHUTDOWN_TIME to be minimum 5 minutes.
Rename scripts/hadoop-rebalance-hdfs-over-lustre-if-increasing-nodes-script.sh to
  scripts/hadoop-rebalance-hdfs-over-lustre-or-hdfs-over-networkfs-if-increasing-nodes-script.sh.
Rename scripts/hadoop-hdfs-over-lustre-nodes-decomission-script.sh to
  scripts/hadoop-hdfs-over-lustre-or-hdfs-over-networkfs-nodes-decomission-script.sh.
Add hdfs over networkfs support to scripts/hadoop-hdfs-over-lustre-or-hdfs-over-networkfs-nodes-decomission-script.sh.

magpie 1.26
-----------
Default intellustre stripesize now 128M.

magpie 1.25
-----------
Change default memory from 90% to 80% of system memory.
Determine default container size based on size of heap instead of fixed value.
Calculate default io.sort.mb based on mapheapsize instead of fixed value. 
Default reducer heap size is now 2X the map heap size.

magpie 1.24
-----------
Turn off speculative execution by default.
Make parallel copies in Hadoop configurable.
Make default tasks per node 1.5X number of cores.

magpie 1.23
-----------
Support new 'hdfsovernetworkfs' filesystem option.
Re-architect internally to be scheduler/resource manager agnostic
- Will allow extensibility in the future.

magpie 1.22
-----------
Support UDA.