@@ -7,6 +7,8 @@ Convert Hbase 'performanceeval' from sequential read/write to random
   read/write.
 Decrease default hbase.server.thread.wakefrequency to 500ms per online
   suggestions.
+Configure hbase.regionserver.handler.count appropriately depending on
+  node count.
 Adjust tasks/per node default if Hbase is running.
 Minor cleanup of help output.
 
